kubernetes/flask-python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    app: flask
  type: LoadBalancer
